--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,12 +77,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Lato
+      fonts:
+        - asset: assents\fonts\Lato-Regular.ttf
+        - asset: assents\fonts\Lato-Bold.ttf
+          weight: 700
+    - family: Anton
+      fonts:
+        - asset: assents\fonts\Anton-Regular.ttf
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
